# pythonScript-boilerplate

./: Makefile  pyproject.toml
docs/: README.md  index.html
src/example/: __main__.py
tests/: conftest.py  test_cli.py  test_setup.py
