[tool.poetry]
name = "script-boilerplate"
version = "0.1.0"
description = ""
authors = ["jorre housen <jhousen.dev@gmail.com>"]
readme = "docs/README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
faker = "^17.4.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.example.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '.pyi?$'

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
