[tool.poetry]
name = "script-boilerplate"
version = "0.1.0"
description = ""
authors = ["jorre housen <jhousen.dev@gmail.com>"]
readme = "docs/README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
faker = "^17.4.0"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^4"
flakeheaven = "^3.2.1"
flake8-bandit = "^3.0"
flake8-bugbear = "^23.2.13"
flake8-simplify = "^0.19.3"
flake8-builtins = "^2.1.0"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.2"
safety = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "src.example.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["example"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '.pyi?$'

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.flakeheaven]
exclude = ["*.md", ".env", ".git", ".gitignore"]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakeheaven.plugins]
mccabe = ["+*"]
pycodestyle = ["+*"]
pyflake = ["+*"]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-simplify = ["+*"]
flake8-builtins = ["+*"]
flake8-pytest-style = ["+*"]
pep8-naming = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["+*", "-S322", "-S101"]
